--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "convex": "^1.29.3",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
+    "nodemailer": "^7.0.11",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
+    "resend": "^6.5.2",
     "svix": "^1.81.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^22",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "19.2.6",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
